# websnap

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
src/websnap/: __init__.py  config.example.ini  config.py  constants.py  logger.py  logic.py  validators.py  websnap.py  websnap_cli.py
src/websnap/config/: config.example.ini  s3.config.example.ini  s3_config.example.ini
tests/: conftest.py  helpers.py  test_logger.py  test_logic.py  test_validators.py  test_websnap.py  test_websnap_cli.py
