[project]
name = "websnap"
version = "0.1.0"
description = "Download and write files hosted at URLs to S3 bucket or local machine."
authors = [
    {name = "Rebecca Kurup Buchholz", email = "rebecca.kurup@wsl.ch"},
]
dependencies = [
    "argparse>=1.4.0",
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "pydantic>=2.7.4",
    "boto3>=1.34.132",
    "requests>=2.32.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
websnap-cli = {call = "websnap.websnap_cli:main"}